--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
-<!doctype html>
-<html lang="en" class="no-js">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>Camera Gimbals</title>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="waves.min.css">
+    </head>
+    <body>
+        <header>
+        <div class="header-content">
+            <h1>CAMERA</h1>
+            <h2>GIMBALS</h2>
+            <a href="products.html" style="ripple">View Products</a>
+        </div>
+        </header>
 
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700,400' rel='stylesheet' type='text/css'>
-
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/main.css"> <!-- Resource style -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-
-	<title>Camera Gimbals</title>
-</head>
-<body>
-<h1> CAMERA GIMBALS</h1>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
-</body>
+        <script src="waves.min.js"></script>
+        <script>
+            Waves.attach('.ripple');
+            Waves.init();
+        </script>
+    </body>
 </html>
