--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Camera Gimbals</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="waves.min.css">
-    </head>
-    <body>
-        <header>
-        <div class="header-content">
-            <h1>CAMERA</h1>
-            <h2>GIMBALS</h2>
-            <a href="products.html" style="ripple">View Products</a>
-        </div>
-        </header>
 
-        <script src="waves.min.js"></script>
-        <script>
-            Waves.attach('.ripple');
-            Waves.init();
-        </script>
-    </body>
+<head>
+    <title>Camera Gimbals</title>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/waves.min.css">
+</head>
+
+<body>
+    <header>
+        <div class="header-content">
+            <h1 class="big">CAMERA</h1>
+            <h2 class="small">GIMBALS</h2>
+            <a href="products.html" class="ripple">View Products</a>
+        </div>
+    </header>
+
+    <script src="/js/waves.min.js"></script>
+    <script type="text/javascript">
+        Waves.attach('.ripple');
+        Waves.init();
+    </script>
+</body>
+
 </html>
