--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/waves.min.css">
+    <!-- Material Design Buttons -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div class="header-content">
-            <h1 class="big">CAMERA</h1>
-            <h2 class="small">GIMBALS</h2>
+            <h1 class="intro-text">CAMERA</h1>
+            <h2 class="intro-text">GIMBALS</h2>
             <a href="products.html" class="ripple">View Products</a>
+
         </div>
     </header>
-
     <script src="/js/waves.min.js"></script>
     <script type="text/javascript">
         Waves.attach('.ripple');
