--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <header>
         <div class="header-content">
-            <h1 class="intro-text">CAMERA</h1>
-            <h2 class="intro-text">GIMBALS</h2>
+            <h1 class="intro-text">CAMERA GIMBALS</h1>
             <a href="products.html" class="ripple">View Products</a>
 
         </div>
