--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <title>Camera Gimbals</title>
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/waves.min.css">
     <!-- Material Design Buttons -->
+    <link rel="stylesheet" href="/css/waves.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
@@ -14,8 +15,9 @@
     <header>
         <div class="header-content">
             <h1 class="intro-text">CAMERA GIMBALS</h1>
+            <div class=spacing>
+            </div>
             <a href="products.html" class="ripple">View Products</a>
-
         </div>
     </header>
     <script src="/js/waves.min.js"></script>
