--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
         <a class="cd-primary-nav-trigger" href="#0">
             <span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
         </a>
-        <!-- cd-primary-nav-trigger -->
     </header>
 
     <nav>
         <ul class="cd-primary-nav">
             <li class="cd-label">Our Services</li>
 
-            <li><a href="#0">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
-            <li><a href="#0">Videos</a></li>
+            <li><a href="videos.html">Videos</a></li>
 
             <li class="cd-label">Contact Us</li>
 
@@ -44,17 +43,17 @@
     <header>
         <div class="header-content">
             <h1 class="intro-text">CAMERA GIMBALS</h1>
-            <div class=spacing>
-            </div>
-            <a href="products.html" class="ripple">View Products</a>
         </div>
-
-        <div class="container">
-            <div class="inner">
-                <p></p>
-            </div>
+        <div class="contentDiv">
+            <img class="arrow" src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_keyboard_arrow_down_48px-128.png" />
         </div>
     </header>
+    <div class="container">
+        <div class="inner">
+            <b><h1>What are Camera Gimbals?</h1></b>
+            <p>The word gimbal can be used to describe any adjustable camera or compass holder designed to keek a design level. By using brushless motors, the gimal adjusts the position of the camera to keep it level with the ground. </p>
+        </div>
+    </div>
     <script src="/js/waves.min.js"></script>
     <script type="text/javascript">
         Waves.attach('.ripple');
