Updated navigation as well as Website Tracking

--- a/404.html
+++ b/404.html
@@ -31,14 +31,22 @@
 
         h2 {
             color: white;
-            font-size: 45px;
+            font-size: 41px;
             font-family: 'Chivo', sans-serif;
+            margin: 0;
+            padding: 0;
         }
 
         h3 {
             color: white;
             font-size: 30px;
+            padding: 10px;
             font-family: 'Chivo', sans-serif;
+            text-decoration: underline
+        }
+
+        a {
+            text-decoration: none;
         }
     </style>
 </head>
@@ -46,8 +54,10 @@
 <body>
 
     <h1>404</h1>
-    <h2>Page not Found</h2>
-    <h3>How about you check out the homepage?</h3>
+    <h2>PAGE NOT FOUND</h2>
+    <a href="index.html">
+        <h3>How about you check out the homepage?</h3></a>
+
 
 </body>
 
