--- a/products.html
+++ b/products.html
@@ -169,7 +169,7 @@
                     <li class="product">
                         <div class="top-info">
                             <div class="check"></div>
-                            <img src="assets/pro/product.png" alt="product image">
+                            <img src="assets/pro/movi_m5.png" alt="product image">
                             <h3>Freefly Movi M10</h3>
                         </div>
                         <!-- .top-info -->
@@ -191,7 +191,7 @@
                     <li class="product">
                         <div class="top-info">
                             <div class="check"></div>
-                            <img src="assets/pro/product.png" alt="product image">
+                            <img src="assets/pro/movi_m5.png" alt="product image">
                             <h3>Freefly Movi M15</h3>
                         </div>
                         <!-- .top-info -->
@@ -213,7 +213,7 @@
                     <li class="product">
                         <div class="top-info">
                             <div class="check"></div>
-                            <img src="assets/pro/product.png" alt="product image">
+                            <img src="assets/pro/movi_m5.png" alt="product image">
                             <h3>Freefly Movi Pro</h3>
                         </div>
                         <!-- .top-info -->
