--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/nav.css">
     <!-- Material Design Buttons -->
     <link rel="stylesheet" href="/css/waves.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Modernizr -->
@@ -70,8 +71,43 @@
     </header>
     <div class="container">
         <div class="inner">
-            <b><h1>What are Camera Gimbals?</h1></b>
-            <p>The word gimbal can be used to describe any adjustable camera or compass holder designed to keek a design level. By using brushless motors, the gimal adjusts the position of the camera to keep it level with the ground. </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b><h1>What are Camera Gimbals?</h1></b>
+                    <p>The word gimbal can be used to describe any adjustable camera or compass holder designed to keek a design level. A Camera gimbal is a device which is designed to support the camera in staying parallel to the ground and maintain its orientation separately from the operator’s movements. By using brushless motors, camera gimbals can support heavy loads, especially when it comes to bigger cameras. On the right you can see a video which shows you the impact of a camera gimbal compared to when not using one.</p>
+                </div>
+                <div class="col-md-4">
+                    <br>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/WJbk3CPrOF8?ecver=1" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="row">
+                <h3>As a part of this project, I will need to write a report, therefore it would be very valuable to me if you could fill out this short survey.</h3>
+                <a class="typeform-share link" href="https://isdstuco.typeform.com/to/JkiZAm" data-mode="2" target="_blank">Launch me!</a>
+                <script>
+                    (function () {
+                        var qs, js, q, s, d = document,
+                            gi = d.getElementById,
+                            ce = d.createElement,
+                            gt = d.getElementsByTagName,
+                            id = 'typef_orm_share',
+                            b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+                        if (!gi.call(d, id)) {
+                            js = ce.call(d, 'script');
+                            js.id = id;
+                            js.src = b + 'share.js';
+                            q = gt.call(d, 'script')[0];
+                            q.parentNode.insertBefore(js, q)
+                        }
+                    })()
+                </script>
+            </div>
+
         </div>
     </div>
     <script src="/js/waves.min.js"></script>
