--- a/ronin-m.html
+++ b/ronin-m.html
@@ -62,78 +62,27 @@
             <li class="cd-social cd-twitter"><a href="https://twitter.com/maximilian_ab">Twitter</a></li>
         </ul>
     </nav>
+
     <div class="container">
-
-        <h1>Welcome to the Video Section!</h1>
-        <h2>Scroll down to view the videos!</h2>
         <br>
+        <br>
+        <h1> THE DJI RONIN-M </h1>
         <div class="row">
+            <br>
+            <br>
 
             <div class="col-md-8">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yZdmPog27zo" frameborder="0" allowfullscreen></iframe>
-                </div>
+                <p>The ronin </p>
             </div>
 
             <div class="col-md-4">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/117798065?color=c9ff23&title=0&byline=0&portrait=0"></iframe>
-                </div>
-
-                <br>
-
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/109922100?color=c9ff23&title=0&byline=0&portrait=0"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sDCumM8VRnU" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
-
-        <br>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/92589310?color=c9ff23&title=0&byline=0&portrait=0"></iframe>
-                </div>
-                <br>
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TjhhGHuxQ4o" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="col-md-8">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lqlrru1V69E" frameborder="0" allowfullscreen></iframe>
-                </div>
-
-            </div>
-
-        </div>
-
-        <br>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7Zx7JCnx83I?ecver=1" frameborder="0" allowfullscreen></iframe>
-                </div>
-                <br>
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WJbk3CPrOF8" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
-
-            <div class="col-md-8">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TzFhZ5yOyC4" frameborder="0" allowfullscreen></iframe>
-                </div>
-
-            </div>
-
-        </div>
-
-
     </div>
+
     <script src="/js/waves.min.js"></script>
     <script type="text/javascript">
         Waves.attach('.ripple');
