--- a/index.html
+++ b/index.html
@@ -87,27 +87,28 @@
             <br>
 
             <div class="row">
-                <h3>As a part of this project, I will need to write a report, therefore it would be very valuable to me if you could fill out this short survey.</h3>
-                <a class="typeform-share link" href="https://isdstuco.typeform.com/to/JkiZAm" data-mode="2" target="_blank">Launch me!</a>
-                <script>
-                    (function () {
-                        var qs, js, q, s, d = document,
-                            gi = d.getElementById,
-                            ce = d.createElement,
-                            gt = d.getElementsByTagName,
-                            id = 'typef_orm_share',
-                            b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-                        if (!gi.call(d, id)) {
-                            js = ce.call(d, 'script');
-                            js.id = id;
-                            js.src = b + 'share.js';
-                            q = gt.call(d, 'script')[0];
-                            q.parentNode.insertBefore(js, q)
-                        }
-                    })()
-                </script>
+                <div class="col-md-8">
+                    <h3>As a part of this project, I will need to write a report, therefore it would be very valuable to me if you could fill out this short survey.</h3>
+                    <a class="typeform-share link" href="https://isdstuco.typeform.com/to/JkiZAm" data-mode="2" target="_blank">Launch me!</a>
+                    <script>
+                        (function () {
+                            var qs, js, q, s, d = document,
+                                gi = d.getElementById,
+                                ce = d.createElement,
+                                gt = d.getElementsByTagName,
+                                id = 'typef_orm_share',
+                                b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+                            if (!gi.call(d, id)) {
+                                js = ce.call(d, 'script');
+                                js.id = id;
+                                js.src = b + 'share.js';
+                                q = gt.call(d, 'script')[0];
+                                q.parentNode.insertBefore(js, q)
+                            }
+                        })()
+                    </script>
+                </div>
             </div>
-
         </div>
     </div>
     <script src="/js/waves.min.js"></script>
